crates/vue_oxc_toolkit/src/parser/snapshots/ast/directive_v-for-error_vue.snap
---
source: crates/vue_oxc_toolkit/src/test.rs
expression: result
---
Program: 
Program {
    span: Span {
        start: 0,
        end: 0,
    },
    source_text: "",
    comments: Vec(
        [],
    ),
    hashbang: None,
    directives: Vec(
        [],
    ),
    body: Vec(
        [],
    ),
    scope_id: Cell {
        value: None,
    },
    source_type: SourceType {
        language: JavaScript,
        module_kind: Script,
        variant: Standard,
    },
}

Errors: 
[
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "Invalid v-for expression",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                18,
                            ),
                            length: 9,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            note: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
]

JS: 


Node Locations:
