crates/vue_oxc_toolkit/src/parser/snapshots/ast/error_empty_multiple_scripts_vue.snap
---
source: crates/vue_oxc_toolkit/src/test.rs
expression: result
---
=============== Program ===============
Program {
    span: Span {
        start: 0,
        end: 53,
    },
    source_text: "<script>\nconst a = 1;\n</script>\n\n<script>\n\n</script>\n",
    comments: Vec(
        [],
    ),
    hashbang: None,
    directives: Vec(
        [],
    ),
    body: Vec(
        [
            VariableDeclaration(
                VariableDeclaration {
                    span: Span {
                        start: 9,
                        end: 21,
                    },
                    declarations: Vec(
                        [
                            VariableDeclarator {
                                span: Span {
                                    start: 15,
                                    end: 20,
                                },
                                id: BindingIdentifier(
                                    BindingIdentifier {
                                        span: Span {
                                            start: 15,
                                            end: 16,
                                        },
                                        name: "a",
                                        symbol_id: Cell {
                                            value: None,
                                        },
                                    },
                                ),
                                type_annotation: None,
                                init: Some(
                                    NumericLiteral(
                                        NumericLiteral {
                                            span: Span {
                                                start: 19,
                                                end: 20,
                                            },
                                            value: 1.0,
                                            raw: Some(
                                                "1",
                                            ),
                                            base: Decimal,
                                        },
                                    ),
                                ),
                                kind: Const,
                                definite: false,
                            },
                        ],
                    ),
                    kind: Const,
                    declare: false,
                },
            ),
            ExpressionStatement(
                ExpressionStatement {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    expression: ArrowFunctionExpression(
                        ArrowFunctionExpression {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            type_parameters: None,
                            params: FormalParameters {
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                items: Vec(
                                    [],
                                ),
                                rest: None,
                                kind: ArrowFormalParameters,
                            },
                            return_type: None,
                            body: FunctionBody {
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                directives: Vec(
                                    [],
                                ),
                                statements: Vec(
                                    [
                                        ExpressionStatement(
                                            ExpressionStatement {
                                                span: Span {
                                                    start: 0,
                                                    end: 0,
                                                },
                                                expression: JSXFragment(
                                                    JSXFragment {
                                                        span: Span {
                                                            start: 0,
                                                            end: 0,
                                                        },
                                                        opening_fragment: JSXOpeningFragment {
                                                            span: Span {
                                                                start: 0,
                                                                end: 0,
                                                            },
                                                        },
                                                        children: Vec(
                                                            [
                                                                Element(
                                                                    JSXElement {
                                                                        span: Span {
                                                                            start: 0,
                                                                            end: 31,
                                                                        },
                                                                        opening_element: JSXOpeningElement {
                                                                            span: Span {
                                                                                start: 0,
                                                                                end: 8,
                                                                            },
                                                                            name: Identifier(
                                                                                JSXIdentifier {
                                                                                    span: Span {
                                                                                        start: 1,
                                                                                        end: 7,
                                                                                    },
                                                                                    name: "script",
                                                                                },
                                                                            ),
                                                                            type_arguments: None,
                                                                            attributes: Vec(
                                                                                [],
                                                                            ),
                                                                        },
                                                                        children: Vec(
                                                                            [],
                                                                        ),
                                                                        closing_element: Some(
                                                                            JSXClosingElement {
                                                                                span: Span {
                                                                                    start: 22,
                                                                                    end: 31,
                                                                                },
                                                                                name: Identifier(
                                                                                    JSXIdentifier {
                                                                                        span: Span {
                                                                                            start: 24,
                                                                                            end: 30,
                                                                                        },
                                                                                        name: "script",
                                                                                    },
                                                                                ),
                                                                            },
                                                                        ),
                                                                    },
                                                                ),
                                                                Text(
                                                                    JSXText {
                                                                        span: Span {
                                                                            start: 31,
                                                                            end: 33,
                                                                        },
                                                                        value: "\n\n",
                                                                        raw: Some(
                                                                            "\n\n",
                                                                        ),
                                                                    },
                                                                ),
                                                                Element(
                                                                    JSXElement {
                                                                        span: Span {
                                                                            start: 33,
                                                                            end: 52,
                                                                        },
                                                                        opening_element: JSXOpeningElement {
                                                                            span: Span {
                                                                                start: 33,
                                                                                end: 41,
                                                                            },
                                                                            name: Identifier(
                                                                                JSXIdentifier {
                                                                                    span: Span {
                                                                                        start: 34,
                                                                                        end: 40,
                                                                                    },
                                                                                    name: "script",
                                                                                },
                                                                            ),
                                                                            type_arguments: None,
                                                                            attributes: Vec(
                                                                                [],
                                                                            ),
                                                                        },
                                                                        children: Vec(
                                                                            [],
                                                                        ),
                                                                        closing_element: Some(
                                                                            JSXClosingElement {
                                                                                span: Span {
                                                                                    start: 43,
                                                                                    end: 52,
                                                                                },
                                                                                name: Identifier(
                                                                                    JSXIdentifier {
                                                                                        span: Span {
                                                                                            start: 45,
                                                                                            end: 51,
                                                                                        },
                                                                                        name: "script",
                                                                                    },
                                                                                ),
                                                                            },
                                                                        ),
                                                                    },
                                                                ),
                                                                Text(
                                                                    JSXText {
                                                                        span: Span {
                                                                            start: 52,
                                                                            end: 53,
                                                                        },
                                                                        value: "\n",
                                                                        raw: Some(
                                                                            "\n",
                                                                        ),
                                                                    },
                                                                ),
                                                            ],
                                                        ),
                                                        closing_fragment: JSXClosingFragment {
                                                            span: Span {
                                                                start: 0,
                                                                end: 0,
                                                            },
                                                        },
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                ),
                            },
                            scope_id: Cell {
                                value: None,
                            },
                            expression: false,
                            async: true,
                            pure: false,
                            pife: false,
                        },
                    ),
                },
            ),
        ],
    ),
    scope_id: Cell {
        value: None,
    },
    source_type: SourceType {
        language: JavaScript,
        module_kind: Unambiguous,
        variant: Jsx,
        extension: Some(
            Js,
        ),
    },
}

===============  Error  ===============
[]

=============== Codegen ===============
const a = 1;
async () => {
	<><script></script>

<script></script>
</>;
};


===============  Spans  ===============
Slice: "<script>\nconst a = 1;\n</script>\n\n<script>\n\n</script>\n"; 
Span: (0, 53); 
Type: Program; 

Slice: "const a = 1;"; 
Span: (9, 21); 
Type: VariableDeclaration; 

Slice: "a = 1"; 
Span: (15, 20); 
Type: VariableDeclarator; 

Slice: "a"; 
Span: (15, 16); 
Type: BindingIdentifier; 

Slice: "1"; 
Span: (19, 20); 
Type: NumericLiteral; 

Slice: "<script>\nconst a = 1;\n</script>"; 
Span: (0, 31); 
Type: JSXElement; 

Slice: "<script>"; 
Span: (0, 8); 
Type: JSXOpeningElement; 

Slice: "script"; 
Span: (1, 7); 
Type: JSXIdentifier; 

Slice: "</script>"; 
Span: (22, 31); 
Type: JSXClosingElement; 

Slice: "script"; 
Span: (24, 30); 
Type: JSXIdentifier; 

Slice: "\n\n"; 
Span: (31, 33); 
Type: JSXText; 

Slice: "<script>\n\n</script>"; 
Span: (33, 52); 
Type: JSXElement; 

Slice: "<script>"; 
Span: (33, 41); 
Type: JSXOpeningElement; 

Slice: "script"; 
Span: (34, 40); 
Type: JSXIdentifier; 

Slice: "</script>"; 
Span: (43, 52); 
Type: JSXClosingElement; 

Slice: "script"; 
Span: (45, 51); 
Type: JSXIdentifier; 

Slice: "\n"; 
Span: (52, 53); 
Type: JSXText;
