crates/vue_oxc_toolkit/src/parser/snapshots/ast/error_irrecoverable-directive_vue.snap
---
source: crates/vue_oxc_toolkit/src/test.rs
expression: result
---
Program: 
Program {
    span: Span {
        start: 0,
        end: 0,
    },
    source_text: "",
    comments: Vec(
        [],
    ),
    hashbang: None,
    directives: Vec(
        [],
    ),
    body: Vec(
        [],
    ),
    scope_id: Cell {
        value: None,
    },
    source_type: SourceType {
        language: JavaScript,
        module_kind: Script,
        variant: Standard,
    },
}

Errors: 
[
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "Expected `,` or `)` but found `decimal`",
            labels: Some(
                [
                    LabeledSpan {
                        label: Some(
                            "`,` or `)` expected",
                        ),
                        span: SourceSpan {
                            offset: SourceOffset(
                                26,
                            ),
                            length: 1,
                        },
                        primary: true,
                    },
                    LabeledSpan {
                        label: Some(
                            "Opened here",
                        ),
                        span: SourceSpan {
                            offset: SourceOffset(
                                23,
                            ),
                            length: 1,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            note: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
]

JS:
 

Node Locations:
