crates/vue_oxc_toolkit/src/parser/snapshots/ast/error_mutiple_langs_vue.snap
---
source: crates/vue_oxc_toolkit/src/test.rs
expression: result
---
=============== Program ===============
Program {
    span: Span {
        start: 0,
        end: 0,
    },
    source_text: "",
    comments: Vec(
        [],
    ),
    hashbang: None,
    directives: Vec(
        [],
    ),
    body: Vec(
        [],
    ),
    scope_id: Cell {
        value: None,
    },
    source_type: SourceType {
        language: JavaScript,
        module_kind: Script,
        variant: Standard,
    },
}

===============  Error  ===============
[
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "<script> and <script setup> must have the same language type.",
            labels: None,
            help: None,
            note: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
]

=============== Codegen ===============


===============  Spans  ===============
